# lvgl--tutorials

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  main.c
scripts/: download_noto_cjk.sh  gen_font.py  gen_noto_font.py  setup_linux.sh  setup_macos.sh  setup_windows.ps1
src/: ui_demo.c  ui_demo.h
